bug fix to not stretch

--- a/src/Projects.css
+++ b/src/Projects.css
@@ -215,6 +215,7 @@ body {
 .box2 img {
     width: 100%;
     height: 100%;
+    object-fit: cover;
 }
 
 .footer {
